# cpp_project_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TEMPLATE_INFO.md  build.bat  build.sh  setup_template.sh
.github/workflows/: ci.yml
cmake/: find_dependency.cmake
docs/: CMakeLists.txt  Doxyfile.in
include/: mylib.hpp
src/: CMakeLists.txt  my_lib.cpp  mylib.cpp
tests/: CMakeLists.txt  test_mylib.cpp
